Update title and name in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Name | Biomedical Engineer</title>
+  <title> Raj Pandya | Biomedical Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -28,7 +28,7 @@
 <body>
 
   <div class="section">
-    <h1>Your Name</h1>
+    <h1>Raj Pandya </h1>
     <p><strong>Biomedical Engineer | R&D • Validation • Quality</strong></p>
     <p>
       I design, test, and validate biomedical instrumentation systems with a focus on
